--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --ignore-pattern 'src/js/lib/' --cache --format=node_modules/eslint-formatter-pretty src/js/",
     "lint-fix": "npm run lint -- --fix"
   },
-  "authors": "Coderiver <html@coderiver.com.ua>",
+  "authors": "valeriiderevshchykov@gmail.com",
   "devDependencies": {
     "autoprefixer": "^8.3.0",
     "babel-core": "^6.18.2",
@@ -51,6 +51,7 @@
     "lint-staged": "^7.0.4",
     "lodash": "^4.3.0",
     "lost": "^7.1.0",
+    "perfect-scrollbar": "^1.3.0",
     "postcss-csso": "^3.0.0",
     "require-dir": "^1.0.0",
     "require-yaml": "^0.0.1",
