--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "run-sequence": "^2.2.1",
     "svg4everybody": "^2.1.9",
     "through2": "^2.0.1",
+    "vide": "^0.5.1",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-glsl-loader": "^1.0.1"
