--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "require-dir": "^1.0.0",
     "require-yaml": "^0.0.1",
     "run-sequence": "^2.2.1",
+    "slick-carousel": "^1.8.1",
     "svg4everybody": "^2.1.9",
     "through2": "^2.0.1",
     "vide": "^0.5.1",
